--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ DB_NAME=ai_chat
 # Dify Configuration
 DIFY_API_URL=http://192.168.31.245:8888
 DIFY_API_KEY=app-gisiuJUOq7XQQFqrMzUZrSW4
+DIFY_API_KEY_NETWORK=app-jblrLO6l7NItglD1DwCZcRad
 
 # Server Configuration
-PORT=80
+PORT=8881
