--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.3",
     "marked": "^17.0.1",
     "mysql2": "^3.15.3",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "uuid": "^13.0.0",
     "ws": "^8.18.3"
